--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,4 +1,4 @@
-Release 5.0-ALPHA1
+Release 5.0-ALPHA2
 -------------------
 
 This is a major release that renders HttpCore API incompatible with the stable 4.x branch
@@ -24,6 +24,39 @@ Please note that as of 5.0 HttpCore requires Java 1.7 or newer.
 Please note that at this point 5.0 APIs are considered API experimental and unstable and are
 expected to change in the coming releases without providing a migration path.
 
+
+Changelog
+-------------------
+
+* HTTPCORE-418: Add a HttpHost constructor for hostname and scheme.
+  Based on contribution by Joshua Hendrickson <joshua dot hendrickson at live dot com>
+
+
+Release 5.0-ALPHA1
+-------------------
+
+This is a major release that renders HttpCore API incompatible with the stable 4.x branch
+and upgrades HTTP/1.1 protocol conformance to the requirements and recommendations of the latest
+protocol specification. This release lays the foundation for transition to HTTP/2 as the primary
+transport protocol in the future releases.
+
+Notable changes and features included in the 5.0 series are:
+
+* Improved conformance to requirements and recommendations of the latest HTTP/1.1 protocol 
+  specification (RFC 7230, RFC 7231)
+
+* Blocking I/O and NIO HTTP transport implementation has been folded into one module
+
+* Package name space changed to 'org.apache.hc.core5' 
+
+* Maven group id changed to 'org.apache.httpcomponents.core5' 
+
+HttpCore 5.0 releases can be co-located with earlier versions.
+
+Please note that as of 5.0 HttpCore requires Java 1.7 or newer.
+
+Please note that at this point 5.0 APIs are considered API experimental and unstable and are
+expected to change in the coming releases without providing a migration path.
 
 
 Changelog
