HTTPCORE-436: Port tests from Apache Commons Logging to Apache Log4j 2.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1767389 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -32,6 +32,7 @@ Changelog
   Based on contribution by Joshua Hendrickson <joshua dot hendrickson at live dot com>
   
 * HTTPCORE-436: Port tests from Apache Commons Logging to Apache Log4j 2.
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 
 Release 5.0-ALPHA1
