HTTPCORE-451: Add a TimeValue class to wrap a long and a TimeUnit. Contributed by Gary Gregory <ggregory at apache.org>
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1789755 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -11,6 +11,8 @@ Changelog
 * HTTPCORE-450: Add a Provider parameter in SSLContextBuilder.
   Contributed by lujianbo <387852424 at qq dot com>, Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-451: Add a TimeValue class to wrap a long and a TimeUnit.
+  Contributed by Gary Gregory <ggregory at apache.org>
 
 Release 5.0-ALPHA2
 -------------------
