[HTTPCORE-453] ServerBootstrap should traverse handler map in insertion order.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1791753 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -13,6 +13,8 @@ Changelog
 
 * HTTPCORE-451: Add a TimeValue class to wrap a long and a TimeUnit.
   Contributed by Gary Gregory <ggregory at apache.org>
+  
+* HTTPCORE-453: ServerBootstrap should traverse handler map in insertion order.
 
 Release 5.0-ALPHA2
 -------------------
