--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -14,6 +14,8 @@ Changelog
 * HTTPCORE-451: Add a TimeValue class to wrap a long and a TimeUnit.
   Contributed by Gary Gregory <ggregory at apache.org>
   
+* HTTPCORE-452: Add a UriRegexMatcher.
+
 * HTTPCORE-453: ServerBootstrap should traverse handler map in insertion order.
 
 Release 5.0-ALPHA2
