HTTPCORE-458: Validate port values. First use case.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1792674 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -89,8 +89,9 @@ Changelog
 * Non-blocking connection initializer to support multi-homed remote endpoints.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
 
-
-
+* HTTPCORE-458: Validate port values
+  Contributed by Gary Gregory <ggregory at apache.org>
+  
 
 Release 5.0-ALPHA2
 -------------------
