[HTTPCORE-464] org.apache.http.nio.protocol.HttpAsyncService does not always log exceptions.
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.4.x@1794222 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -18,6 +18,9 @@ Changelog
 * HTTPCORE-462: Deprecate SSLContextBuilder.useProtocol(String) in favor a new method setProtocol(String).
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-464: org.apache.http.nio.protocol.HttpAsyncService does not always log exceptions.
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 
 Release 4.4.6
 -------------------
