--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -10,6 +10,9 @@ Changelog
 * HTTPCORE-471: Add APIs URIBuilder.localhost() and setHost(InetAddress)
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-466: Round out the SslContextBuilder by adding missing APIs.
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 
 Release 5.0-ALPHA3
 -------------------
