[HTTPCORE-470] Add a org.apache.http.nio.protocol.NullRequestHandler singleton.

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -30,6 +30,9 @@ Changelog
 * HTTPCORE-468: Allow HttpAsyncService subclasses to customize the HTTP status code.
   Contributed by Gary Gregory <ggregory at apache.org>
 
+* HTTPCORE-470: Add a org.apache.http.nio.protocol.NullRequestHandler singleton.
+  Contributed by Gary Gregory <ggregory at apache.org>
+
 
 Release 4.4.6
 -------------------
